--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^3.3.0
   firebase_auth: ^5.1.4
   background_app_bar: ^2.1.0
+  flutter_svg: ^2.0.10+1
 
 dev_dependencies:
   flutter_test:
