--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,10 @@ dependencies:
   awesome_dialog: ^3.2.1
   bloc: ^8.1.4
   flutter_bloc: ^8.1.6
+  firebase_storage: ^12.1.3
+  image_picker: ^1.1.2
+  path: ^1.9.0
+  cloud_firestore: ^5.2.1
 
 dev_dependencies:
   flutter_test:
